[gd_scene load_steps=3 format=2]

[ext_resource path="res://example/players.gd" type="Script" id=1]
[ext_resource path="res://assets/resources/theme.tres" type="Theme" id=2]

[node name="Players" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelTitle" type="Label" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 81.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Players"
align = 1
valign = 1

[node name="LineEditPlayersOutput" type="LineEdit" parent="VBoxContainer"]
margin_top = 85.0
margin_right = 720.0
margin_bottom = 167.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
virtual_keyboard_enabled = false
placeholder_text = "Output"
caret_blink = true
caret_blink_speed = 0.5

[node name="LabelEndpoints" type="Label" parent="VBoxContainer"]
margin_top = 171.0
margin_right = 720.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Endpoints"
align = 1
valign = 2

[node name="ButtonCompareProfile" type="Button" parent="VBoxContainer"]
margin_top = 256.0
margin_right = 720.0
margin_bottom = 338.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Compare Profile (PId)"
expand_icon = true

[node name="ButtonCompareProfileWithAltNameHints" type="Button" parent="VBoxContainer"]
margin_top = 342.0
margin_right = 720.0
margin_bottom = 423.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Comp Profile W/ Alt Name (PId, OName, CName)"
expand_icon = true

[node name="ButtonLoadCurrentPlayer" type="Button" parent="VBoxContainer"]
margin_top = 427.0
margin_right = 720.0
margin_bottom = 509.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Load Current Player (ForceReload)"
expand_icon = true

[node name="ButtonLoadFriends" type="Button" parent="VBoxContainer"]
margin_top = 513.0
margin_right = 720.0
margin_bottom = 595.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Load Friends (PageSize, ForceReload, AskPerm)"
expand_icon = true

[node name="ButtonSearchPlayer" type="Button" parent="VBoxContainer"]
margin_top = 599.0
margin_right = 720.0
margin_bottom = 680.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Search Player"
expand_icon = true

[node name="LabelParameters" type="Label" parent="VBoxContainer"]
margin_top = 684.0
margin_right = 720.0
margin_bottom = 766.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Parameters"
align = 1
valign = 2

[node name="LineEditPlayerId" type="LineEdit" parent="VBoxContainer"]
margin_top = 770.0
margin_right = 720.0
margin_bottom = 851.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "Other Player Id (PId)"
caret_blink = true
caret_blink_speed = 0.5

[node name="LineEditPlayerName" type="LineEdit" parent="VBoxContainer"]
margin_top = 855.0
margin_right = 720.0
margin_bottom = 937.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "Other Player Name (OName)"
caret_blink = true
caret_blink_speed = 0.5

[node name="LineEditCurrentPlayerName" type="LineEdit" parent="VBoxContainer"]
margin_top = 941.0
margin_right = 720.0
margin_bottom = 1023.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "Current Player Name (CName)"
caret_blink = true
caret_blink_speed = 0.5

[node name="SpinBoxPageSize" type="SpinBox" parent="VBoxContainer"]
margin_top = 1027.0
margin_right = 720.0
margin_bottom = 1108.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 50.0
value = 1.0
rounded = true
align = 1
prefix = "Page Size"

[node name="CheckButtonPlayersForceReload" type="CheckButton" parent="VBoxContainer"]
margin_top = 1112.0
margin_right = 720.0
margin_bottom = 1194.0
size_flags_horizontal = 3
size_flags_vertical = 3
pressed = true
text = "Force Reload"
align = 1

[node name="CheckButtonAskPermission" type="CheckButton" parent="VBoxContainer"]
margin_top = 1198.0
margin_right = 720.0
margin_bottom = 1280.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Ask Permission"
align = 1

[connection signal="pressed" from="VBoxContainer/ButtonCompareProfile" to="." method="_on_ButtonCompareProfile_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonCompareProfileWithAltNameHints" to="." method="_on_ButtonCompareProfileWithAltNameHints_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonLoadCurrentPlayer" to="." method="_on_ButtonLoadCurrentPlayer_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonLoadFriends" to="." method="_on_ButtonLoadFriends_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSearchPlayer" to="." method="_on_ButtonSearchPlayer_pressed"]
